--- a/pipeline/continuous-deployment-admin.yml
+++ b/pipeline/continuous-deployment-admin.yml
@@ -73,6 +73,51 @@ stages:
                 appType: 'webApp'
                 WebAppName: 'ecs-dev-as-admin-frontend'
                 packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Admin/CheckYourEligibility-Admin.zip'
+    - stage: RunCypressTestsDevEnv
+    displayName: Run Cypress Tests On Dev Env
+    jobs:
+    - job: 'SetUpCypress'
+      displayName: 'SetUpTests'
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: inline
+          script: |
+           cd tests
+           npm install
+      - task: Bash@3
+        displayName: 'RunTests'
+        inputs:
+         targetType: inline
+         script: |
+          cd tests
+          export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_DEV)"
+          export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
+          export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
+          export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
+          export CYPRESS_AUTH_SECRET="$(AUTH_SECRET)"
+          export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
+          export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
+          export CYPRESS_DFE_ADMIN_EMAIL_ADDRESS="$(DFE_ADMIN_EMAIL_ADDRESS)"
+          export CYPRESS_DFE_ADMIN_PASSWORD="$(DFE_ADMIN_PASSWORD)"
+          npm run adminE2e:electron
+      - task: Bash@3
+        condition: always()
+        displayName: 'Generate report'
+        inputs:
+         targetType: inline
+         script: |
+          cd tests
+          npm run combine:reports
+
+      - task: PublishTestResults@2
+        condition: always()
+        displayName: 'Publish test results'
+        inputs:
+         testResultsFiles: '**/combined-report.xml'
+         searchFolder: 'tests'
   - stage: DeployAppTest
     displayName: Deploy App Test
     jobs:
@@ -99,8 +144,8 @@ stages:
                 appType: 'webApp'
                 WebAppName: 'ecs-test-as-admin-frontend'
                 packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Admin/CheckYourEligibility-Admin.zip'
-  - stage: RunCypressTests
-    displayName: Run Cypress Tests
+  - stage: RunCypressTestsTestEnv
+    displayName: Run Cypress Tests On Test Env
     jobs:
     - job: 'SetUpCypress'
       displayName: 'SetUpTests'
@@ -119,7 +164,7 @@ stages:
          targetType: inline
          script: |
           cd tests
-          export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL)"
+          export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_TEST)"
           export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
           export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
           export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
