--- a/pipeline/continuous-deployment-admin.yml
+++ b/pipeline/continuous-deployment-admin.yml
@@ -94,12 +94,6 @@ stages:
          script: |
           cd tests
           export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_DEV)"
-          export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
-          export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
-          export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
-          export CYPRESS_AUTH_SECRET="$(AUTH_SECRET)"
-          export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
-          export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
           export CYPRESS_DFE_ADMIN_EMAIL_ADDRESS="$(DFE_ADMIN_EMAIL_ADDRESS)"
           export CYPRESS_DFE_ADMIN_PASSWORD="$(DFE_ADMIN_PASSWORD)"
           npm run adminE2e:electron
@@ -165,10 +159,6 @@ stages:
          script: |
           cd tests
           export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_TEST)"
-          export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
-          export CYPRESS_AUTH_SECRET="$(AUTH_SECRET)"
-          export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
-          export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
           export CYPRESS_DFE_ADMIN_EMAIL_ADDRESS="$(DFE_ADMIN_EMAIL_ADDRESS)"
           export CYPRESS_DFE_ADMIN_PASSWORD="$(DFE_ADMIN_PASSWORD)"
           npm run adminE2e:electron
@@ -216,7 +206,45 @@ stages:
                 WebAppName: 'ece-pp-as-admin-frontend'
                 packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Admin/CheckYourEligibility-Admin.zip'
 
+  - stage: RunCypressTestsPpEnv
+    displayName: Run Cypress Tests On Pre-Prod Env
+    jobs:
+      - job: 'SetUpCypressPpEnv'
+        displayName: 'SetUpTestsPpEnv'
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - task: Bash@3
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm install
+          - task: Bash@3
+            displayName: 'RunTests'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_PP)"
+                export CYPRESS_DFE_ADMIN_EMAIL_ADDRESS="$(DFE_ADMIN_EMAIL_ADDRESS)"
+                export CYPRESS_DFE_ADMIN_PASSWORD="$(DFE_ADMIN_PASSWORD)"
+                npm run adminE2e:electron
+          - task: Bash@3
+            condition: always()
+            displayName: 'Generate report'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm run combine:reports
 
+          - task: PublishTestResults@2
+            condition: always()
+            displayName: 'Publish test results'
+            inputs:
+              testResultsFiles: '**/combined-report.xml'
+              searchFolder: 'tests'
 
   - stage: DeployAppProd
     displayName: Deploy App Production
