--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -108,10 +108,7 @@ stages:
          script: |
           cd tests
           export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_DEV)"
-          export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
-          export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
           export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
-          export CYPRESS_AUTH_SECRET="$(AUTH_SECRET)"
           export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
           export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
           export CYPRESS_ONEGOV_EMAIL="$(ONEGOV_EMAIL)"
@@ -230,6 +227,48 @@ stages:
                 WebAppName: 'ece-pp-as-frontend'
                 packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
 
+  - stage: RunCypressTestsPpEnv
+    displayName: Run Cypress Tests On Pre-Prod Env
+    jobs:
+      - job: 'SetUpCypressPpEnv'
+        displayName: 'SetUpTestsPpEnv'
+        pool:
+          vmImage: ubuntu-latest
+        steps:
+          - task: Bash@3
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm install
+          - task: Bash@3
+            displayName: 'RunTests'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL_PP)"
+                export CYPRESS_AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
+                export CYPRESS_AUTH_USERNAME="$(AUTH_USERNAME)"
+                export CYPRESS_AUTH_PASSWORD="$(AUTH_PASSWORD)"
+                export CYPRESS_ONEGOV_EMAIL="$(ONEGOV_EMAIL)"
+                export CYPRESS_ONEGOV_PASSWORD="$(ONEGOV_PASSWORD)"
+                npm run parentE2e:electron
+          - task: Bash@3
+            condition: always()
+            displayName: 'Generate report'
+            inputs:
+              targetType: inline
+              script: |
+                cd tests
+                npm run combine:reports
+
+          - task: PublishTestResults@2
+            condition: always()
+            displayName: 'Publish test results'
+            inputs:
+              testResultsFiles: '**/combined-report.xml'
+              searchFolder: 'tests'
 
   - stage: DeployAppProd
     displayName: Deploy App Production
