--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -43,6 +43,7 @@
     "SlidingExpiration": true
   },
   "ContactUsUrl": "https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u",
+  "FeedbackUrl": "https://dferesearch.fra1.qualtrics.com/jfe/form/SV_bjB0MQiSJtvhyZw",
   "Clarity": {
     "School": "",
     "LA": ""
